<resources>
    <string name="app_name">Eventify</string>
    <string name="event_image">event image</string>

    <style name="styleTextForTitle" parent="TextAppearance.AppCompat">
        <item name="android:layout_margin">8dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">18sp</item>
    </style>

    <style name="StyleForText" parent="TextAppearance.AppCompat">
        <item name="android:layout_margin">8dp</item>
        <item name="android:textSize">15sp</item>
    </style>

    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_list">Event List</string>

    <string-array name="time_period_options">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Custom range</item>
    </string-array>


    <string-array name="type_report_options_EO">
        <item>Ticket sales</item>
        <item>Revenue</item>
        <item>Seat occupancy</item>
    </string-array>


    <string-array name="time_period_options_EO">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

</resources>
