<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".Admin.AdminLoginPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:layout_margin="8dp"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:helperText="Required*"
                    app:helperTextTextColor="#E50046"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:layout_margin="8dp"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:helperText="Required*"
                    app:helperTextTextColor="#E50046"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/styleTextForTitle"
                android:id="@+id/adminLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                app:cornerRadius="10dp"/>

                <TextView
                    style="@style/StyleForText"
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Don't have any account?" />

                <com.google.android.material.button.MaterialButton
                    style="@style/styleTextForTitle"
                    android:id="@+id/adminMoveToSignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp"
                    app:cornerRadius="10dp"/>
        </LinearLayout>
</ScrollView>
